// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OverlayComponent should render correctly 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 1px solid #e7ebf2;
  border-radius: 0.25rem;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  position: relative;
  padding: 0 1.5rem;
  z-index: 10;
}

.emotion-2>div:first-of-type {
  margin-right: 0;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
}

.emotion-5 {
  cursor: pointer;
  margin: auto 5px;
  position: absolute;
  left: 0;
  top: 0;
  bottom: 0;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  z-index: 10;
}

.emotion-6 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-7 {
  fill: #0e0e17;
  width: 1.5625rem;
  height: 1.5625rem;
}

.emotion-7 path {
  fill: #0e0e17;
}

.emotion-8 {
  padding: 0;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  text-align: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-9 {
  margin: 0 0.5rem;
  padding: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  cursor: pointer;
  font-weight: 500;
  color: #0e0e17;
}

.emotion-10 {
  font-size: 1rem;
  font-weight: 500;
  color: #0e0e17;
  background-color: #fdfdfd;
  padding: 0.5rem 1rem;
  height: 2.875rem;
  opacity: 1;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
}

.emotion-10:hover {
  background-color: #e4e4e4;
}

.emotion-10:active {
  background-color: #cacaca;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-12 {
  margin-left: 0;
  margin-right: 0.5rem;
}

.emotion-13 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-15 {
  fill: #0e0e17;
  width: 0.625rem;
  height: 0.625rem;
}

.emotion-15 path {
  fill: #0e0e17;
}

.emotion-16 {
  cursor: pointer;
  margin: auto 5px;
  position: absolute;
  right: 0;
  top: 0;
  bottom: 0;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  z-index: 10;
}

.emotion-19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -ms-flex-pack: space-around;
  -webkit-justify-content: space-around;
  justify-content: space-around;
  border-top: 1px solid;
  border-bottom: 1px solid;
  border-color: #e7ebf2;
}

.emotion-20 {
  color: #5f6c85;
  padding: 1rem 0;
  width: 39px;
  font-size: 0.875rem;
  text-align: center;
  font-weight: 500;
}

.emotion-27 {
  border-collapse: separate;
  border-spacing: 0 0.5rem;
}

.emotion-28 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: #0e0e17;
  width: 40px;
  padding: 0 4px;
  opacity: 1;
}

.emotion-29 {
  border: 1px solid transparent;
  width: 39px;
  height: 39px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background: transparent;
}

.emotion-29:hover {
  border-radius: 100%;
  background: #d4e4ff;
}

.emotion-30 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: #0e0e17;
  width: 40px;
  padding: 0 4px;
  font-weight: bold;
  opacity: 1;
}

.emotion-31 {
  border: 1px solid #93a5c5;
  border-radius: 100%;
  width: 39px;
  height: 39px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background: transparent;
}

.emotion-31:hover {
  border-radius: 100%;
  background: #d4e4ff;
}

.emotion-32 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: #fff;
  width: 40px;
  padding: 0 4px;
  opacity: 1;
  background: transparent;
  border-bottom-left-radius: 100%;
  border-top-left-radius: 100%;
}

.emotion-32:after {
  z-index: -1;
  content: ' ';
  height: 100%;
  width: 50%;
  position: absolute;
  top: 0;
  background: #e9f1ff;
  left: initial;
  right: 0;
  border-bottom-right-radius: false;
  border-top-right-radius: false;
  border-bottom-left-radius: 100%;
  border-top-left-radius: 100%;
}

.emotion-33 {
  border: 1px solid transparent;
  border-radius: 100%;
  width: 39px;
  height: 39px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background: #8833FF;
}

.emotion-33:hover {
  border-radius: 100%;
  background: false;
}

.emotion-34 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: #0e0e17;
  width: 40px;
  padding: 0 4px;
  opacity: 1;
  background: #e9f1ff;
}

.emotion-86 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  background: transparent;
}

.emotion-92 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  margin-bottom: 1rem;
  margin-right: 1.5rem;
}

.emotion-92>button {
  margin: 0.5rem 0 0.5rem 0.5rem;
}

.emotion-93 {
  font-size: 0.8125rem;
  font-weight: 500;
  color: #8833FF;
  background-color: transparent;
  padding: 0.5rem 1rem;
  height: 2.25rem;
  opacity: 1;
  border-radius: 0.25rem;
  border: solid 1px rgba(136,51,255,0.5);
  cursor: pointer;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
}

.emotion-93:hover {
  background-color: rgba(136,51,255,0.1);
}

.emotion-93:active {
  background-color: rgba(136,51,255,0.2);
}

.emotion-95 {
  margin-left: 0;
  margin-right: 0;
}

.emotion-96 {
  font-size: 0.8125rem;
  font-weight: 500;
  color: #fff;
  background-color: #8833FF;
  padding: 0.5rem 1rem;
  height: 2.25rem;
  opacity: 1;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
}

.emotion-96:hover {
  background-color: #6a00ff;
}

.emotion-96:active {
  background-color: #50c;
}

.emotion-0 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 1px solid #e7ebf2;
  border-radius: 0.25rem;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  position: relative;
  padding: 0 1.5rem;
  z-index: 10;
}

.emotion-2>div:first-of-type {
  margin-right: 0;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
}

.emotion-5 {
  cursor: pointer;
  margin: auto 5px;
  position: absolute;
  left: 0;
  top: 0;
  bottom: 0;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  z-index: 10;
}

.emotion-6 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-7 {
  fill: #0e0e17;
  width: 1.5625rem;
  height: 1.5625rem;
}

.emotion-7 path {
  fill: #0e0e17;
}

.emotion-8 {
  padding: 0;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  text-align: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-9 {
  margin: 0 0.5rem;
  padding: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  cursor: pointer;
  font-weight: 500;
  color: #0e0e17;
}

.emotion-10 {
  font-size: 1rem;
  font-weight: 500;
  color: #0e0e17;
  background-color: #fdfdfd;
  padding: 0.5rem 1rem;
  height: 2.875rem;
  opacity: 1;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
}

.emotion-10:hover {
  background-color: #e4e4e4;
}

.emotion-10:active {
  background-color: #cacaca;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-12 {
  margin-left: 0;
  margin-right: 0.5rem;
}

.emotion-13 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-15 {
  fill: #0e0e17;
  width: 0.625rem;
  height: 0.625rem;
}

.emotion-15 path {
  fill: #0e0e17;
}

.emotion-16 {
  cursor: pointer;
  margin: auto 5px;
  position: absolute;
  right: 0;
  top: 0;
  bottom: 0;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  z-index: 10;
}

.emotion-19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -ms-flex-pack: space-around;
  -webkit-justify-content: space-around;
  justify-content: space-around;
  border-top: 1px solid;
  border-bottom: 1px solid;
  border-color: #e7ebf2;
}

.emotion-20 {
  color: #5f6c85;
  padding: 1rem 0;
  width: 39px;
  font-size: 0.875rem;
  text-align: center;
  font-weight: 500;
}

.emotion-27 {
  border-collapse: separate;
  border-spacing: 0 0.5rem;
}

.emotion-28 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: #0e0e17;
  width: 40px;
  padding: 0 4px;
  opacity: 1;
}

.emotion-29 {
  border: 1px solid transparent;
  width: 39px;
  height: 39px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background: transparent;
}

.emotion-29:hover {
  border-radius: 100%;
  background: #d4e4ff;
}

.emotion-30 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: #0e0e17;
  width: 40px;
  padding: 0 4px;
  font-weight: bold;
  opacity: 1;
}

.emotion-31 {
  border: 1px solid #93a5c5;
  border-radius: 100%;
  width: 39px;
  height: 39px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background: transparent;
}

.emotion-31:hover {
  border-radius: 100%;
  background: #d4e4ff;
}

.emotion-32 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: #fff;
  width: 40px;
  padding: 0 4px;
  opacity: 1;
  background: transparent;
  border-bottom-left-radius: 100%;
  border-top-left-radius: 100%;
}

.emotion-32:after {
  z-index: -1;
  content: ' ';
  height: 100%;
  width: 50%;
  position: absolute;
  top: 0;
  background: #e9f1ff;
  left: initial;
  right: 0;
  border-bottom-right-radius: false;
  border-top-right-radius: false;
  border-bottom-left-radius: 100%;
  border-top-left-radius: 100%;
}

.emotion-33 {
  border: 1px solid transparent;
  border-radius: 100%;
  width: 39px;
  height: 39px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background: #8833FF;
}

.emotion-33:hover {
  border-radius: 100%;
  background: false;
}

.emotion-34 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: #0e0e17;
  width: 40px;
  padding: 0 4px;
  opacity: 1;
  background: #e9f1ff;
}

.emotion-86 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  background: transparent;
}

.emotion-92 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  margin-bottom: 1rem;
  margin-right: 1.5rem;
}

.emotion-92>button {
  margin: 0.5rem 0 0.5rem 0.5rem;
}

.emotion-93 {
  font-size: 0.8125rem;
  font-weight: 500;
  color: #8833FF;
  background-color: transparent;
  padding: 0.5rem 1rem;
  height: 2.25rem;
  opacity: 1;
  border-radius: 0.25rem;
  border: solid 1px rgba(136,51,255,0.5);
  cursor: pointer;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
}

.emotion-93:hover {
  background-color: rgba(136,51,255,0.1);
}

.emotion-93:active {
  background-color: rgba(136,51,255,0.2);
}

.emotion-95 {
  margin-left: 0;
  margin-right: 0;
}

.emotion-96 {
  font-size: 0.8125rem;
  font-weight: 500;
  color: #fff;
  background-color: #8833FF;
  padding: 0.5rem 1rem;
  height: 2.25rem;
  opacity: 1;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
}

.emotion-96:hover {
  background-color: #6a00ff;
}

.emotion-96:active {
  background-color: #50c;
}

<div>
  <div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          <div
            class="emotion-4"
          >
            <div
              class="emotion-5"
            >
              <span
                class="emotion-6"
              >
                <span
                  class="emotion-7"
                />
              </span>
            </div>
            <div
              role="button"
            >
              <div
                class="emotion-8"
              >
                <div
                  class="emotion-9"
                >
                  <button
                    class="emotion-10"
                    data-testid="button"
                  >
                    <span
                      class="emotion-11"
                    >
                      <span
                        class="emotion-12"
                      >
                        November
                         
                        2020
                      </span>
                      <span
                        class="emotion-13"
                      >
                        <span
                          class="emotion-6"
                        >
                          <span
                            class="emotion-15"
                          />
                        </span>
                      </span>
                    </span>
                  </button>
                </div>
              </div>
              <div
                class="emotion-16"
              >
                <span
                  class="emotion-6"
                >
                  <span
                    class="emotion-7"
                  />
                </span>
              </div>
            </div>
          </div>
          <div
            class="emotion-19"
          >
            <div
              class="emotion-20"
            >
              Mo
            </div>
            <div
              class="emotion-20"
            >
              Tu
            </div>
            <div
              class="emotion-20"
            >
              We
            </div>
            <div
              class="emotion-20"
            >
              Th
            </div>
            <div
              class="emotion-20"
            >
              Fr
            </div>
            <div
              class="emotion-20"
            >
              Sa
            </div>
            <div
              class="emotion-20"
            >
              Su
            </div>
          </div>
          <table
            class="emotion-27"
          >
            <tbody>
              <tr>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-28"
                  >
                    <div
                      class="emotion-29"
                    >
                      2
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-30"
                  >
                    <div
                      class="emotion-31"
                    >
                      3
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-32"
                  >
                    <div
                      class="emotion-33"
                    >
                      4
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-34"
                  >
                    <div
                      class="emotion-29"
                    >
                      5
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-34"
                  >
                    <div
                      class="emotion-29"
                    >
                      6
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-34"
                  >
                    <div
                      class="emotion-29"
                    >
                      7
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-34"
                  >
                    <div
                      class="emotion-29"
                    >
                      8
                    </div>
                  </div>
                </td>
              </tr>
              <tr>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-34"
                  >
                    <div
                      class="emotion-29"
                    >
                      9
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-34"
                  >
                    <div
                      class="emotion-29"
                    >
                      10
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-34"
                  >
                    <div
                      class="emotion-29"
                    >
                      11
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-34"
                  >
                    <div
                      class="emotion-29"
                    >
                      12
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-34"
                  >
                    <div
                      class="emotion-29"
                    >
                      13
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-34"
                  >
                    <div
                      class="emotion-29"
                    >
                      14
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-34"
                  >
                    <div
                      class="emotion-29"
                    >
                      15
                    </div>
                  </div>
                </td>
              </tr>
              <tr>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-34"
                  >
                    <div
                      class="emotion-29"
                    >
                      16
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-34"
                  >
                    <div
                      class="emotion-29"
                    >
                      17
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-34"
                  >
                    <div
                      class="emotion-29"
                    >
                      18
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-34"
                  >
                    <div
                      class="emotion-29"
                    >
                      19
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-34"
                  >
                    <div
                      class="emotion-29"
                    >
                      20
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-34"
                  >
                    <div
                      class="emotion-29"
                    >
                      21
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-34"
                  >
                    <div
                      class="emotion-29"
                    >
                      22
                    </div>
                  </div>
                </td>
              </tr>
              <tr>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-34"
                  >
                    <div
                      class="emotion-29"
                    >
                      23
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-34"
                  >
                    <div
                      class="emotion-29"
                    >
                      24
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-34"
                  >
                    <div
                      class="emotion-29"
                    >
                      25
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-34"
                  >
                    <div
                      class="emotion-29"
                    >
                      26
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-34"
                  >
                    <div
                      class="emotion-29"
                    >
                      27
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-34"
                  >
                    <div
                      class="emotion-29"
                    >
                      28
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-34"
                  >
                    <div
                      class="emotion-29"
                    >
                      29
                    </div>
                  </div>
                </td>
              </tr>
              <tr>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-34"
                  >
                    <div
                      class="emotion-29"
                    >
                      30
                    </div>
                  </div>
                </td>
                <td
                  class="emotion-86"
                />
                <td
                  class="emotion-86"
                />
                <td
                  class="emotion-86"
                />
                <td
                  class="emotion-86"
                />
                <td
                  class="emotion-86"
                />
                <td
                  class="emotion-86"
                />
              </tr>
            </tbody>
          </table>
        </div>
      </div>
      <div
        class="emotion-92"
      >
        <button
          class="emotion-93"
          data-testid="button"
        >
          <span
            class="emotion-11"
          >
            <span
              class="emotion-95"
            >
              Cancel
            </span>
          </span>
        </button>
        <button
          class="emotion-96"
          data-testid="button"
        >
          <span
            class="emotion-11"
          >
            <span
              class="emotion-95"
            >
              Apply
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`OverlayComponent should render datepicker correctly 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 1px solid #e7ebf2;
  border-radius: 0.25rem;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  margin-bottom: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  position: relative;
  padding: 0 1.5rem;
  z-index: 10;
}

.emotion-2>div:first-of-type {
  margin-right: 1.5rem;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
}

.emotion-5 {
  cursor: pointer;
  margin: auto 5px;
  position: absolute;
  left: 0;
  top: 0;
  bottom: 0;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  z-index: 10;
}

.emotion-6 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-7 {
  fill: #0e0e17;
  width: 1.5625rem;
  height: 1.5625rem;
}

.emotion-7 path {
  fill: #0e0e17;
}

.emotion-8 {
  margin: 1rem 0;
  padding: 0;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  text-align: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-9 {
  margin: 0 0.5rem;
  padding: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-weight: 500;
  color: #0e0e17;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -ms-flex-pack: space-around;
  -webkit-justify-content: space-around;
  justify-content: space-around;
  border-top: 1px solid;
  border-bottom: 1px solid;
  border-color: #e7ebf2;
}

.emotion-11 {
  color: #5f6c85;
  padding: 1rem 0;
  width: 39px;
  font-size: 0.875rem;
  text-align: center;
  font-weight: 500;
}

.emotion-18 {
  border-collapse: separate;
  border-spacing: 0 0.5rem;
}

.emotion-19 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: #0e0e17;
  width: 40px;
  padding: 0 4px;
  opacity: 1;
}

.emotion-20 {
  border: 1px solid transparent;
  width: 39px;
  height: 39px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background: transparent;
}

.emotion-20:hover {
  border-radius: 100%;
  background: #d4e4ff;
}

.emotion-21 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: #0e0e17;
  width: 40px;
  padding: 0 4px;
  font-weight: bold;
  opacity: 1;
}

.emotion-22 {
  border: 1px solid #93a5c5;
  border-radius: 100%;
  width: 39px;
  height: 39px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background: transparent;
}

.emotion-22:hover {
  border-radius: 100%;
  background: #d4e4ff;
}

.emotion-23 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: #fff;
  width: 40px;
  padding: 0 4px;
  opacity: 1;
  background: transparent;
  border-bottom-left-radius: 100%;
  border-top-left-radius: 100%;
}

.emotion-23:after {
  z-index: -1;
  content: ' ';
  height: 100%;
  width: 50%;
  position: absolute;
  top: 0;
  background: #e9f1ff;
  left: initial;
  right: 0;
  border-bottom-right-radius: false;
  border-top-right-radius: false;
  border-bottom-left-radius: 100%;
  border-top-left-radius: 100%;
}

.emotion-24 {
  border: 1px solid transparent;
  border-radius: 100%;
  width: 39px;
  height: 39px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background: #8833FF;
}

.emotion-24:hover {
  border-radius: 100%;
  background: false;
}

.emotion-25 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: #0e0e17;
  width: 40px;
  padding: 0 4px;
  opacity: 1;
  background: #e9f1ff;
}

.emotion-77 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  background: transparent;
}

.emotion-87 {
  cursor: pointer;
  margin: auto 5px;
  position: absolute;
  right: 0;
  top: 0;
  bottom: 0;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  z-index: 10;
}

.emotion-132 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: #fff;
  width: 40px;
  padding: 0 4px;
  opacity: 1;
  background: transparent;
  border-bottom-right-radius: 100%;
  border-top-right-radius: 100%;
}

.emotion-132:after {
  z-index: -1;
  content: ' ';
  height: 100%;
  width: 50%;
  position: absolute;
  top: 0;
  background: #e9f1ff;
  left: 0;
  right: initial;
  border-bottom-right-radius: 100%;
  border-top-right-radius: 100%;
  border-bottom-left-radius: false;
  border-top-left-radius: false;
}

.emotion-0 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 1px solid #e7ebf2;
  border-radius: 0.25rem;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  margin-bottom: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  position: relative;
  padding: 0 1.5rem;
  z-index: 10;
}

.emotion-2>div:first-of-type {
  margin-right: 1.5rem;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
}

.emotion-5 {
  cursor: pointer;
  margin: auto 5px;
  position: absolute;
  left: 0;
  top: 0;
  bottom: 0;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  z-index: 10;
}

.emotion-6 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-7 {
  fill: #0e0e17;
  width: 1.5625rem;
  height: 1.5625rem;
}

.emotion-7 path {
  fill: #0e0e17;
}

.emotion-8 {
  margin: 1rem 0;
  padding: 0;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  text-align: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-9 {
  margin: 0 0.5rem;
  padding: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-weight: 500;
  color: #0e0e17;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -ms-flex-pack: space-around;
  -webkit-justify-content: space-around;
  justify-content: space-around;
  border-top: 1px solid;
  border-bottom: 1px solid;
  border-color: #e7ebf2;
}

.emotion-11 {
  color: #5f6c85;
  padding: 1rem 0;
  width: 39px;
  font-size: 0.875rem;
  text-align: center;
  font-weight: 500;
}

.emotion-18 {
  border-collapse: separate;
  border-spacing: 0 0.5rem;
}

.emotion-19 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: #0e0e17;
  width: 40px;
  padding: 0 4px;
  opacity: 1;
}

.emotion-20 {
  border: 1px solid transparent;
  width: 39px;
  height: 39px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background: transparent;
}

.emotion-20:hover {
  border-radius: 100%;
  background: #d4e4ff;
}

.emotion-21 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: #0e0e17;
  width: 40px;
  padding: 0 4px;
  font-weight: bold;
  opacity: 1;
}

.emotion-22 {
  border: 1px solid #93a5c5;
  border-radius: 100%;
  width: 39px;
  height: 39px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background: transparent;
}

.emotion-22:hover {
  border-radius: 100%;
  background: #d4e4ff;
}

.emotion-23 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: #fff;
  width: 40px;
  padding: 0 4px;
  opacity: 1;
  background: transparent;
  border-bottom-left-radius: 100%;
  border-top-left-radius: 100%;
}

.emotion-23:after {
  z-index: -1;
  content: ' ';
  height: 100%;
  width: 50%;
  position: absolute;
  top: 0;
  background: #e9f1ff;
  left: initial;
  right: 0;
  border-bottom-right-radius: false;
  border-top-right-radius: false;
  border-bottom-left-radius: 100%;
  border-top-left-radius: 100%;
}

.emotion-24 {
  border: 1px solid transparent;
  border-radius: 100%;
  width: 39px;
  height: 39px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background: #8833FF;
}

.emotion-24:hover {
  border-radius: 100%;
  background: false;
}

.emotion-25 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: #0e0e17;
  width: 40px;
  padding: 0 4px;
  opacity: 1;
  background: #e9f1ff;
}

.emotion-77 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  background: transparent;
}

.emotion-87 {
  cursor: pointer;
  margin: auto 5px;
  position: absolute;
  right: 0;
  top: 0;
  bottom: 0;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  z-index: 10;
}

.emotion-132 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: #fff;
  width: 40px;
  padding: 0 4px;
  opacity: 1;
  background: transparent;
  border-bottom-right-radius: 100%;
  border-top-right-radius: 100%;
}

.emotion-132:after {
  z-index: -1;
  content: ' ';
  height: 100%;
  width: 50%;
  position: absolute;
  top: 0;
  background: #e9f1ff;
  left: 0;
  right: initial;
  border-bottom-right-radius: 100%;
  border-top-right-radius: 100%;
  border-bottom-left-radius: false;
  border-top-left-radius: false;
}

<div>
  <div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          <div
            class="emotion-4"
          >
            <div
              class="emotion-5"
            >
              <span
                class="emotion-6"
              >
                <span
                  class="emotion-7"
                />
              </span>
            </div>
            <div
              role="button"
            >
              <div
                class="emotion-8"
              >
                <div
                  class="emotion-9"
                >
                  <div>
                    November
                     
                    2020
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="emotion-10"
          >
            <div
              class="emotion-11"
            >
              Mo
            </div>
            <div
              class="emotion-11"
            >
              Tu
            </div>
            <div
              class="emotion-11"
            >
              We
            </div>
            <div
              class="emotion-11"
            >
              Th
            </div>
            <div
              class="emotion-11"
            >
              Fr
            </div>
            <div
              class="emotion-11"
            >
              Sa
            </div>
            <div
              class="emotion-11"
            >
              Su
            </div>
          </div>
          <table
            class="emotion-18"
          >
            <tbody>
              <tr>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-19"
                  >
                    <div
                      class="emotion-20"
                    >
                      2
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-21"
                  >
                    <div
                      class="emotion-22"
                    >
                      3
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-23"
                  >
                    <div
                      class="emotion-24"
                    >
                      4
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-20"
                    >
                      5
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-20"
                    >
                      6
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-20"
                    >
                      7
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-20"
                    >
                      8
                    </div>
                  </div>
                </td>
              </tr>
              <tr>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-20"
                    >
                      9
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-20"
                    >
                      10
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-20"
                    >
                      11
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-20"
                    >
                      12
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-20"
                    >
                      13
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-20"
                    >
                      14
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-20"
                    >
                      15
                    </div>
                  </div>
                </td>
              </tr>
              <tr>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-20"
                    >
                      16
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-20"
                    >
                      17
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-20"
                    >
                      18
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-20"
                    >
                      19
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-20"
                    >
                      20
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-20"
                    >
                      21
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-20"
                    >
                      22
                    </div>
                  </div>
                </td>
              </tr>
              <tr>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-20"
                    >
                      23
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-20"
                    >
                      24
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-20"
                    >
                      25
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-20"
                    >
                      26
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-20"
                    >
                      27
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-20"
                    >
                      28
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-20"
                    >
                      29
                    </div>
                  </div>
                </td>
              </tr>
              <tr>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-20"
                    >
                      30
                    </div>
                  </div>
                </td>
                <td
                  class="emotion-77"
                />
                <td
                  class="emotion-77"
                />
                <td
                  class="emotion-77"
                />
                <td
                  class="emotion-77"
                />
                <td
                  class="emotion-77"
                />
                <td
                  class="emotion-77"
                />
              </tr>
            </tbody>
          </table>
        </div>
        <div
          class="emotion-3"
        >
          <div
            class="emotion-4"
          >
            <div
              role="button"
            >
              <div
                class="emotion-8"
              >
                <div
                  class="emotion-9"
                >
                  <div>
                    December
                     
                    2020
                  </div>
                </div>
              </div>
              <div
                class="emotion-87"
              >
                <span
                  class="emotion-6"
                >
                  <span
                    class="emotion-7"
                  />
                </span>
              </div>
            </div>
          </div>
          <div
            class="emotion-10"
          >
            <div
              class="emotion-11"
            >
              Mo
            </div>
            <div
              class="emotion-11"
            >
              Tu
            </div>
            <div
              class="emotion-11"
            >
              We
            </div>
            <div
              class="emotion-11"
            >
              Th
            </div>
            <div
              class="emotion-11"
            >
              Fr
            </div>
            <div
              class="emotion-11"
            >
              Sa
            </div>
            <div
              class="emotion-11"
            >
              Su
            </div>
          </div>
          <table
            class="emotion-18"
          >
            <tbody>
              <tr>
                <td
                  class="emotion-77"
                />
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-20"
                    >
                      1
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-20"
                    >
                      2
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-20"
                    >
                      3
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-20"
                    >
                      4
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-20"
                    >
                      5
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-20"
                    >
                      6
                    </div>
                  </div>
                </td>
              </tr>
              <tr>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-20"
                    >
                      7
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-20"
                    >
                      8
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-20"
                    >
                      9
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-20"
                    >
                      10
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-20"
                    >
                      11
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-20"
                    >
                      12
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-20"
                    >
                      13
                    </div>
                  </div>
                </td>
              </tr>
              <tr>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-20"
                    >
                      14
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-20"
                    >
                      15
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-20"
                    >
                      16
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-132"
                  >
                    <div
                      class="emotion-24"
                    >
                      17
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-19"
                  >
                    <div
                      class="emotion-20"
                    >
                      18
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-19"
                  >
                    <div
                      class="emotion-20"
                    >
                      19
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-19"
                  >
                    <div
                      class="emotion-20"
                    >
                      20
                    </div>
                  </div>
                </td>
              </tr>
              <tr>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-19"
                  >
                    <div
                      class="emotion-20"
                    >
                      21
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-19"
                  >
                    <div
                      class="emotion-20"
                    >
                      22
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-19"
                  >
                    <div
                      class="emotion-20"
                    >
                      23
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-19"
                  >
                    <div
                      class="emotion-20"
                    >
                      24
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-19"
                  >
                    <div
                      class="emotion-20"
                    >
                      25
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-19"
                  >
                    <div
                      class="emotion-20"
                    >
                      26
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-19"
                  >
                    <div
                      class="emotion-20"
                    >
                      27
                    </div>
                  </div>
                </td>
              </tr>
              <tr>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-19"
                  >
                    <div
                      class="emotion-20"
                    >
                      28
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-19"
                  >
                    <div
                      class="emotion-20"
                    >
                      29
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-19"
                  >
                    <div
                      class="emotion-20"
                    >
                      30
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-19"
                  >
                    <div
                      class="emotion-20"
                    >
                      31
                    </div>
                  </div>
                </td>
                <td
                  class="emotion-77"
                />
                <td
                  class="emotion-77"
                />
                <td
                  class="emotion-77"
                />
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;
